# python-with-ai-2025-10-05

./: .gitignore  README.md  benchmark_levenshtein.py  circle.py  drinking_age.py  genbank_analyzer.py  genbank_analyzer_example.py  generated-copilot-instructions.md  main.py  ncbi_genbank_downloader.py  pie_chart.py  pyproject.toml  rectangle.py  rectangle_argv.py  rectangle_flet.py  rectangle_flet_fixed.py  rectangle_gui.py  test_drinking_age.py  test_genbank_analyzer_oo.py  test_ncbi_genbank_downloader.py  test_pie_chart.py  test_rectangle.py  test_word_distance.py  word_distance.py
.github/: copilot-instructions.md
biodata/: ON205948.1.fasta  ON205948.1.gb
