[project]
name = "demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flet[all]>=0.28.3",
    "python-Levenshtein>=0.25.1",
    "rapidfuzz>=3.14.0",
    "editdistance>=0.8.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "mypy>=1.18.2",
]
